first verison of the site including gd view and svm view

--- a/viewer/viewerGD.html
+++ b/viewer/viewerGD.html
@@ -5,7 +5,7 @@
   <title>iLearnML Graph Viewer</title>
   <script src="mathbox-bundle.js"></script>
   <script src="dat.gui.js"></script>
-  
+
 <!-- http://silentmatt.com/javascript-expression-evaluator/ -->
 <script src="parser.js"></script>
 
@@ -56,7 +56,7 @@
 				</tr>
 				<tr>
 					<td colspan="4">
-						xMax : <input type="text" id="xmax" value="3"> xMin : <input type="text" id="xmin" value="-3"> yMax : <input type="text" id="ymax" value="3"> YMin : <input type="text" id="ymin" value="-3">
+						xMax : <input type="text" id="xmax" value="3"> xMin : <input type="text" id="xmin" value="-3"> yMax : <input type="text" id="ymax" value="3"> YMin : <input type="text" id="ymin" value="-3"> zMax : <input type="text" id="zmax" value="0"> zMin : <input type="text" id="zmin" value="0">
 					</td>
 				</tr>
 				<tr>
@@ -80,6 +80,7 @@
 		</table>
 
   <script>
+    document.getElementById("paramForm").style.display = "none";
     var mathbox = mathBox({
       plugins: ['core', 'controls', 'cursor', 'mathbox'],
       controls: {klass: THREE.OrbitControls}
@@ -88,18 +89,18 @@
 
     var three = mathbox.three;
     three.renderer.setClearColor(new THREE.Color(0xFFFFFF), 1.0);
-
+	var displayTrace = true;
 	var view;
-	
+
 	var functionText = "sin(x^2+y^2)";
-	
+
 	var pointText = "(1,1)";
 	var currVecNum=0;
 	var points=[];
 	var a = 1, b = 1;
 	var	xMin = -3, xMax = 3, yMin = -3,	yMax = 3, zMin = -3, zMax = 3;
 	var zAutofit = true;
-	
+
 	// start of updateGraph function ==============================================================
 	var updateGraphFunc = function() {
 		currVecNum=0;
@@ -133,6 +134,8 @@
 		var yMax = parseFloat(document.getElementById("ymax").value);
 		var xMin = parseFloat(document.getElementById("xmin").value);
 		var yMin = parseFloat(document.getElementById("ymin").value);
+		var zMax = parseFloat(document.getElementById("zmax").value);
+		var zMin = parseFloat(document.getElementById("zmin").value);
 		var startx = parseFloat(document.getElementById("startx").value);
 		var starty = parseFloat(document.getElementById("starty").value);
 		var startz = parseFloat(document.getElementById("startz").value);
@@ -144,7 +147,9 @@
 					emit(x, zFunc(x, y), y);
 				}
 		);
-
+		if (zMax != 0 || zMin!=0){
+			zAutofit=false;
+		}
 		if (zAutofit) {
 			var xStep = (xMax - xMin) / 256;
 			var yStep = (yMax - yMin) / 256;
@@ -172,7 +177,7 @@
 					}
 			);
 		} else if (graphColorStyle == "rainbow") {
-			// rainbow hue; zMax = red, zMin = violet			
+			// rainbow hue; zMax = red, zMin = violet
 			graphColors.set("expr",
 					function (emit, x, y) {
 						var z = zFunc(x, y);
@@ -183,7 +188,7 @@
 					}
 			);
 		} else if (graphColorStyle == "solid blue") {
-			// just a solid blue color			
+			// just a solid blue color
 			graphColors.set("expr",
 					function (emit) {
 						emit(0.5, 0.5, 1.0, 1.0);
@@ -215,69 +220,69 @@
 		if(points.length!=0){
 				var start = points[currVecNum].split(',');
 				var end = points[currVecNum+1].split(',');
-				var vecData = view.interval({
-					expr: function (emit) {
-						emit(parseFloat(start[0]), parseFloat(start[2]), parseFloat(start[1]));
-						emit(parseFloat(end[0]), parseFloat(end[2]), parseFloat(end[1]));
-					},
-					width: 64,
-					channels: 3,
-					items: 3,
+				var vecData =  view.array({
+					width: 1, items: 2, channels: 3,
+					data: [ [parseFloat(start[0]),parseFloat(start[2]),parseFloat(start[1])],[parseFloat(end[0]), parseFloat(end[2]), parseFloat(end[1])] ],
 				});
 		}else {
-			var vecData = view.interval({
-				expr: function (emit) {
-					emit(startx, startz, starty);
-					emit(endx, endz, endy);
-				},
-				width: 64,
-				channels: 3,
-				items: 3,
+			var vecData = view.array({
+				width: 1, items: 2, channels: 3,
+				data: [ [startx, startz, starty],[endx, endz, endy] ],
 			});
 		}
 		vec.set("points", vecData);
 	}
 
 	// end of updateGraph function ==============================================================
-	
-	
+
+
 	var updateGraph = function() { updateGraphFunc(); };
 	var NextVec= function(){
 		if(points.length== currVecNum+2)
 			window.alert("No more steps");
 		else{
-			currVecNum+=2;
+			currVecNum++;
 			var start = points[currVecNum].split(',');
 			var end = points[currVecNum+1].split(',');
-			var vecData = view.interval({
-				expr: function (emit) {
-					emit(parseFloat(start[0]), parseFloat(start[2]), parseFloat(start[1]));
-					emit(parseFloat(end[0]), parseFloat(end[2]), parseFloat(end[1]));
-				},
-				width: 64,
-				channels: 3,
-				items: 3,
+			var vecData = view.array({
+				width: 1, items: 2, channels: 3,
+				data: [ [parseFloat(start[0]),parseFloat(start[2]),parseFloat(start[1])],[parseFloat(end[0]), parseFloat(end[2]), parseFloat(end[1])] ],
 			});
 			vec.set("points", vecData);
+			if (displayTrace){
+				start = points[currVecNum-1].split(',');
+				end = points[currVecNum].split(',');
+				vecData = view.array({
+					width: 1, items: 2, channels: 3,
+					data: [ [parseFloat(start[0]),parseFloat(start[2]),parseFloat(start[1])],[parseFloat(end[0]), parseFloat(end[2]), parseFloat(end[1])] ],
+				});
+				trace.push(view.vector({
+					color: "black", width: 8, end: true, visible: true, points: vecData
+				}));
+				displayTrace = !displayTrace;
+			}else{
+				displayTrace = !displayTrace;
+			}
 		}
 	};
 	var PrevVec= function(){
 		if(currVecNum== 0)
 			window.alert("This is the first step");
 		else{
-			currVecNum-=2;
+			currVecNum--;
 			var start = points[currVecNum].split(',');
 			var end = points[currVecNum+1].split(',');
-			var vecData = view.interval({
-				expr: function (emit) {
-					emit(parseFloat(start[0]), parseFloat(start[2]), parseFloat(start[1]));
-					emit(parseFloat(end[0]), parseFloat(end[2]), parseFloat(end[1]));
-				},
-				width: 64,
-				channels: 3,
-				items: 3,
+			var vecData = view.array({
+				width: 1, items: 2, channels: 3,
+				data: [ [parseFloat(start[0]),parseFloat(start[2]),parseFloat(start[1])],[parseFloat(end[0]), parseFloat(end[2]), parseFloat(end[1])] ],
 			});
 			vec.set("points", vecData);
+			if (!displayTrace){
+				trace.pop().remove();
+				displayTrace = !displayTrace;
+			}else{
+				displayTrace = !displayTrace;
+			}
 		}
 	};
 	// setting proxy:true allows interactive controls to override base position
@@ -297,21 +302,21 @@
     var xTicks = view.ticks( {width: 5, size: 15, color: "red", zBias:2} );
     var xFormat = view.format( {digits: 2, font:"Arial", weight: "bold", style: "normal", source: xScale} );
     var xTicksLabel = view.label( {color: "red", zIndex: 0, offset:[0,-20], points: xScale, text: xFormat} );
-	
+
 	var yAxis = view.axis( {axis: 3, width: 8, detail: 40, color:"green"} );
     var yScale = view.scale( {axis: 3, divide: 5, nice:true, zero:false} );
     var yTicks = view.ticks( {width: 5, size: 15, color: "green", zBias:2} );
     var yFormat = view.format( {digits: 2, font:"Arial", weight: "bold", style: "normal", source: yScale} );
     var yTicksLabel = view.label( {color: "green", zIndex: 0, offset:[0,0], points: yScale, text: yFormat} );
-	
+
 	var zAxis = view.axis( {axis: 2, width: 8, detail: 40, color:"blue"} );
     var zScale = view.scale( {axis: 2, divide: 5, nice:true, zero:false} );
     var zTicks = view.ticks( {width: 5, size: 15, color: "blue", zBias:2} );
     var zFormat = view.format( {digits: 2, font:"Arial", weight: "bold", style: "normal", source: zScale} );
     var zTicksLabel = view.label( {color: "blue", zIndex: 0, offset:[0,0], points: zScale, text: zFormat} );
-	
+
 	view.grid( {axes:[1,3], width: 2, divideX: 20, divideY: 20, opacity:0.25} );
-	
+
 
 	var graphData = view.area({
 		axes: [1,3], channels: 3, width: 64, height: 64,
@@ -321,7 +326,7 @@
           emit( x, z, y );
         },
     });
-	
+
 	// actuall emitter set later.
 	var graphColors = view.area({
 		expr: function (emit, x)
@@ -335,34 +340,26 @@
 		width:  64, height: 64,
 		channels: 4, // RGBA
     });
-	var vecData = view.interval({
-		expr: function (emit) {
-			emit(0, 2, 0);
-			emit(2, 2, 2);
-		},
-		width: 64,
-		channels: 3,
-		items: 3,
+	var vecData = view.array({
+		width: 1, items: 2, channels: 3,
+		data: [ [0,0,0],[1,1,1] ],
 	});
-
 	var vec = view.vector({
-		width:25,
-	  	size:25,
-		points: vecData,
-    end: true,
-	stroke: "solid",
-    color: '#000000',
-  });
+		color: "orange", width: 8, end: true, visible: true, points: vecData
+ 	 });
+
+	var  trace =[];
+
 	// create graph in two parts, because want solid and wireframe to be different colors
 	// shaded:false for a solid color (curve appearance provided by mesh)
 	// width: width of line mesh
 	// note: colors will mult. against color value, so set color to white (#FFFFFF) to let colors have complete control.
-	var graphShaded = false;	
+	var graphShaded = false;
 	var graphViewSolid = view.surface({
-		points:graphData, 
+		points:graphData,
 		color:"#FFFFFF", shaded:false, fill:true, lineX:false, lineY:false, colors:graphColors, visible:true, width:0
 	});
-	
+
 	var graphWireVisible = true;
 	var graphViewWire = view.surface({
 		points: graphData,
