continued website development

--- a/gradient decent.html
+++ b/gradient decent.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="assets/css/templatemo-art-factory.css">
     <link rel="stylesheet" type="text/css" href="assets/css/owl-carousel.css">
-
+    <link rel = "icon" href ="assets/images/title_icon.png" type = "image/x-icon">
 </head>
 
 <body>
@@ -42,20 +42,23 @@
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
-                        <li class="scroll-to-section"><a href="#welcome">Home</a></li>
+                        <li class="scroll-to-section"><a href="index.html">Home</a></li>
                         <li class="scroll-to-section"><a href="#about">About</a></li>
                         <li class="scroll-to-section"><a href="#services">Services</a></li>
                         <li class="scroll-to-section"><a href="#frequently-question">Frequently Questions</a></li>
                         <li class="submenu">
-                            <a href="javascript:;">Drop Down</a>
+                            <a href="javascript:;">Optimizations</a>
                             <ul>
-                                <li><a href="">About Us</a></li>
-                                <li><a href="">Features</a></li>
-                                <li><a href="">FAQ's</a></li>
-                                <li><a href="">Blog</a></li>
+                                <li><a href="gradient%20decent.html">Gradient Decent</a></li>
+                                <li><a href="">Newton</a></li>
                             </ul>
                         </li>
-                        <li class="scroll-to-section"><a href="#contact-us">Contact Us</a></li>
+                        <li class="submenu">
+                            <a href="javascript:;">Learning</a>
+                            <ul>
+                                <li><a href="">SVM</a></li>
+                            </ul>
+                        </li>
                     </ul>
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -82,10 +85,9 @@
 </section>
 
 <section class="section" id="about2">
-    <div class="row">
-        <iframe src="ilearnml_graph_viewer.html" width="50%" height="700" scrolling="no"> </iframe>
-        <iframe src="ilearnml_graph_viewer.html" width="50%" height="700" scrolling="no"> </iframe>
-    </div>
+
+        <iframe src="../viewer/viewerGD.html" width="100%" height="700" scrolling="no"> </iframe>
+
 </section>
 
 <section class="section" id="about3">
@@ -93,7 +95,7 @@
 </section>
 
 <section class="section" id="about4">
-    <iframe src="scatter.html" width="100%" height="700" scrolling="no"> </iframe>
+    <iframe src="../viewer/viewerSVM.html" width="100%" height="700" scrolling="no"> </iframe>
 </section>
 
 
