--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="assets/css/templatemo-art-factory.css">
     <link rel="stylesheet" type="text/css" href="assets/css/owl-carousel.css">
-
+      <link rel = "icon" href ="assets/images/title_icon.png" type = "image/x-icon">
     </head>
     
     <body>
@@ -51,7 +51,12 @@
                                 <ul>
                                     <li><a href="gradient%20decent.html">Gradient Decent</a></li>
                                     <li><a href="">Newton</a></li>
-                                    <li><a href="">Quasi Newton</a></li>
+                                </ul>
+                            </li>
+                            <li class="submenu">
+                                <a href="javascript:;">Learning</a>
+                                <ul>
+                                    <li><a href="">SVM</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -80,7 +85,7 @@
                         <a href="#about" class="main-button-slider">Find Out More</a>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
-                        <img src="icon.png" class="rounded img-fluid d-block mx-auto" alt="First Vector Graphic">
+                        <img src="assets/images/icon.png" class="rounded img-fluid d-block mx-auto" alt="First Vector Graphic">
                     </div>
                 </div>
             </div>
@@ -144,27 +149,27 @@
                 <div class="owl-carousel owl-theme">
                     <div class="item service-item">
                         <div class="icon">
-                            <i><img src="assets/images/service-icon-01.png" alt=""></i>
+                            <i><img src="assets/images/gd_small.png" alt=""></i>
                         </div>
-                        <h5 class="service-title">First Box Service</h5>
-                        <p>Aenean vulputate massa sed neque consectetur, ac fringilla quam aliquet. Sed a enim nec eros tempor cursus at id libero.</p>
-                        <a href="#" class="main-button">Read More</a>
+                        <h5 class="service-title">Gradient Decent</h5>
+                        <p>Our grdient decent notebook would help you learn the basics about this algorithm</p>
+                        <a href="gradient%20decent.html" class="main-button">The Notebook</a>
                     </div>
                     <div class="item service-item">
                         <div class="icon">
-                            <i><img src="assets/images/service-icon-02.png" alt=""></i>
+                            <i><img src="assets/images/svm_small.png" alt=""></i>
                         </div>
-                        <h5 class="service-title">Second Box Title</h5>
-                        <p>Pellentesque vitae urna ut nisi viverra tristique quis at dolor. In non sodales dolor, id egestas quam. Aliquam erat volutpat. </p>
-                        <a href="#" class="main-button">Discover More</a>
+                        <h5 class="service-title">SVM</h5>
+                        <p>Our SVM notebook would help you learn the basics about this learning algorithm</p>
+                        <a href="#" class="main-button">The Notebook</a>
                     </div>
                     <div class="item service-item">
                         <div class="icon">
                             <i><img src="assets/images/service-icon-03.png" alt=""></i>
                         </div>
-                        <h5 class="service-title">Third Title Box</h5>
-                        <p>Quisque finibus libero augue, in ultrices quam dictum id. Aliquam quis tellus sit amet urna tincidunt bibendum.</p>
-                        <a href="#" class="main-button">More Detail</a>
+                        <h5 class="service-title">Newton</h5>
+                        <p>Our Newton notebook would help you learn the basics about this optimization algorithm</p>
+                        <a href="#" class="main-button">The Notebook</a>
                     </div>
                     <div class="item service-item">
                         <div class="icon">
@@ -214,12 +219,13 @@
                 </div>
                 <div class="right-text col-lg-5 col-md-12 col-sm-12 mobile-top-fix">
                     <div class="left-heading">
-                        <h5>Vivamus sodales nisi id ante molestie venenatis</h5>
+                        <h5>About </h5>
                     </div>
                     <div class="left-text">
-                        <p>This template is <a href="#">last updated on 20 August 2019 </a>for main menu drop-down arrow and sub menu text color. Duis auctor dolor eu scelerisque vestibulum. Vestibulum lacinia, nisl sit amet tristique condimentum. <br><br>
-                            Sed a consequat velit. Morbi lectus sapien, vestibulum et sapien sit amet, ultrices malesuada odio. Donec non quam euismod, mattis dui a, ultrices nisi.</p>
-                        <a href="#about2" class="main-button">Discover More</a>
+                        <p> <br>Machine Learning is taking a bigger part in the lives of all of us and because of that we think that every one should know how it works.<br>
+                            Useing iLearnML we hope to develop interactive, visualization-based program for teaching selected subjects in ML to nonmajors and highschool students
+                            and allow advance users an easy way to visualize the ML models they build. </p>
+                        <a href="#welcome" class="main-button">Home</a>
                     </div>
                 </div>
             </div>
