--- a/viewer/viewerSVM.html
+++ b/viewer/viewerSVM.html
@@ -15,7 +15,7 @@
         #paramForm {
         }
     </style>
-
+    <link rel = "icon" href ="title_icon.png" type = "image/x-icon">
 </head>
 <body>
 <div id="paramForm">
