--- a/viewer/viewerGD.html
+++ b/viewer/viewerGD.html
@@ -100,11 +100,14 @@
 	var a = 1, b = 1;
 	var	xMin = -3, xMax = 3, yMin = -3,	yMax = 3, zMin = -3, zMax = 3;
 	var zAutofit = true;
+	var currCurveNum=0;
 
 	// start of updateGraph function ==============================================================
 	var updateGraphFunc = function() {
+		currCurveNum=0;
 		currVecNum=0;
 		points=[];
+		curves=[];
 		var hashParams = window.location.hash;
 		if(hashParams.length != 0) {
 			hashParams = hashParams.substr(1).split('&');// substr(1) to remove the `#`
@@ -116,15 +119,20 @@
 						points[j]= points[j].split('|');
 					}
 				}else {
-					if(p[0]=="hide"){
-						var x = document.getElementById("paramForm");
-						if(p[1]=="true"){
-							x.style.display = "block";
-						}else{
-							x.style.display = "none";
+					if (p[0]=="curves") {
+						curves = p[1].split('|');
+					}
+					else {
+						if (p[0] == "hide") {
+							var x = document.getElementById("paramForm");
+							if (p[1] == "true") {
+								x.style.display = "block";
+							} else {
+								x.style.display = "none";
+							}
+						} else {
+							document.getElementById(p[0]).value = decodeURIComponent(p[1]);
 						}
-					}else {
-						document.getElementById(p[0]).value = decodeURIComponent(p[1]);
 					}
 				}
 			}
@@ -150,6 +158,15 @@
 					emit(x, zFunc(x, y), y);
 				}
 		);
+		if (curves.length!=0){
+			newton_curve.set("visible",true);
+			var cFunc = Parser.parse(curves[0].toLowerCase()).toJSFunction(['x', 'y']);
+			curveData.set("expr",
+					function (emit, x, y) {
+						emit(x, cFunc(x, y), y);
+					}
+			);
+		}
 		if (zMax != 0 || zMin!=0){
 			zAutofit=false;
 		}
@@ -288,12 +305,22 @@
 		if (points.length== counter){
 			window.alert("no more steps");
 		}
+		if(curves.length <= currCurveNum+1){
+		}
+		else{
+			currCurveNum++;
+			var cFunc = Parser.parse(curves[currCurveNum].toLowerCase()).toJSFunction(['x', 'y']);
+			curveData.set("expr",
+					function (emit, x, y) {
+						emit(x, cFunc(x, y), y);
+					}
+			);
+		}
 	};
 	var PrevVec= function(){
 		if(currVecNum==0)
 			window.alert("This is the first step");
 		else{
-			debugger;
 			currVecNum--;
 			for (var i =0 ;i<points.length;i++){
 					for (var i =0 ;i<points.length;i++) {
@@ -313,6 +340,17 @@
 				}
 			}
 			displayTrace = !displayTrace;
+		if(currCurveNum==0){
+		}
+		else{
+			currCurveNum--;
+			var cFunc = Parser.parse(curves[currCurveNum].toLowerCase()).toJSFunction(['x', 'y']);
+			curveData.set("expr",
+					function (emit, x, y) {
+						emit(x, cFunc(x, y), y);
+					}
+			);
+		}
 	};
 	// setting proxy:true allows interactive controls to override base position
 	var camera = mathbox.camera( { proxy: true, position: [4,2,4] } );
@@ -346,7 +384,14 @@
 
 	view.grid( {axes:[1,3], width: 2, divideX: 20, divideY: 20, opacity:0.25} );
 
-
+	var curveData = view.area({
+		axes: [1,3], channels: 3, width: 64, height: 64,
+		expr: function (emit, x, y)
+		{
+			var z = x*y;
+			emit( x, z, y );
+		},
+	});
 	var graphData = view.area({
 		axes: [1,3], channels: 3, width: 64, height: 64,
         expr: function (emit, x, y)
@@ -403,6 +448,10 @@
 		points: graphData,
 		color:"#000000", shaded:false, fill:false, lineX:true, lineY:true, visible:graphWireVisible, width:2
     });
+	var newton_curve = view.surface({
+		points: curveData,
+		color:"#000000", shaded:false, fill:false, lineX:true, lineY:true, visible:false, width:2
+	});
 	updateGraphFunc();
 	</script>
 </body>
