--- a/static/viewer/viewerGD.html
+++ b/static/viewer/viewerGD.html
@@ -18,7 +18,7 @@
 		}
 	</style>
 	<link rel = "icon" href ="title_icon.png" type = "image/x-icon">
-	<link rel="stylesheet" type="text/css" href="../templates/assets/css/templatemo-art-factory.css">
+	<link rel="stylesheet" type="text/css" href="../../templates/assets/css/templatemo-art-factory.css">
 </head>
 <body>
 <div id="paramForm">
