added styling to all symulations

--- a/static/viewer/viewerGD.html
+++ b/static/viewer/viewerGD.html
@@ -17,14 +17,13 @@
 			display : none;
 		}
 	</style>
-	<link rel = "icon" href ="title_icon.png" type = "image/x-icon">
+	<link rel = "icon" href ="../../templates/assets/images/title_icon.png" type = "image/x-icon">
 	<link rel="stylesheet" type="text/css" href="../../templates/assets/css/templatemo-art-factory.css">
 </head>
 <body>
 <div id="paramForm">
 	<div class="contact-form">
 	<table>
-
 		<form>
 				<tr>
 						Function:
