--- a/static/viewer/viewerSVM.html
+++ b/static/viewer/viewerSVM.html
@@ -13,29 +13,35 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <style>
         #paramForm {
+            display : none;
         }
     </style>
-    <link rel = "icon" href ="title_icon.png" type = "image/x-icon">
+    <link rel = "icon" href ="../../templates/assets/images/title_icon.png" type = "image/x-icon">
+    <link rel="stylesheet" type="text/css" href="../../templates/assets/css/templatemo-art-factory.css">
 </head>
 <body>
 <div id="paramForm">
+    <div class="contact-form">
     <table>
         <form>
             <tr>
                 <td>
-                    xMax : <input type="text" id="xmax" value="3"> xMin : <input type="text" id="xmin" value="-3"> yMax : <input type="text" id="ymax" value="3"> YMin : <input type="text" id="ymin" value="-3"> zMax : <input type="text" id="zmax" value="3"> zMin : <input type="text" id="zmin" value="-3">
+                    xMax : <input class="contact-field" type="text" id="xmax" value="3"> xMin : <input class="contact-field" type="text" id="xmin" value="-3"> yMax : <input class="contact-field" type="text" id="ymax" value="3"> YMin : <input class="contact-field" type="text" id="ymin" value="-3"> zMax : <input class="contact-field" type="text" id="zmax" value="3"> zMin : <input class="contact-field" type="text" id="zmin" value="-3">
                 </td>
             </tr>
         </form>
     </table>
+    </div>
 </div>
 <table>
+    <div class="contact-form">
     <tr>
         <td>
-            <button type="button" onclick="NextVec()">Next Step</button>
-            <button type="button" onclick="PrevVec()">Previous Step</button>
+            <button class="main-button" type="button" onclick="NextVec()">Next Step</button>
+            <button class="main-button" type="button" onclick="PrevVec()">Previous Step</button>
         </td>
     </tr>
+    </div>
 </table>
 <script>
     document.getElementById("paramForm").style.display = "none";
