fixed more bugs

--- a/static/viewer/viewerNewton.html
+++ b/static/viewer/viewerNewton.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <style>
         #paramForm {
-
+            display:none;
         }
     </style>
     <link rel = "icon" href ="../../templates/assets/images/title_icon.png" type = "image/x-icon">
