--- a/static/viewer/viewerNewton.html
+++ b/static/viewer/viewerNewton.html
@@ -75,8 +75,8 @@
 <table>
     <tr>
         <td>
-            <button class="main-button" type="button" onclick="NextVec()">Next Step</button>
             <button class="main-button" type="button" onclick="PrevVec()">Previous Step</button>
+            <button class="main-button" type="button" onclick="NextVec()">Next Step</button>
         </td>
 
     </tr>
@@ -284,7 +284,7 @@
         }
     };
     // setting proxy:true allows interactive controls to override base position
-    var camera = mathbox.camera( { proxy: true, position: [4,2,4] } );
+    var camera = mathbox.camera( { proxy: true, position: [-4,2,-4] } );
 
     // save as variable to adjust later
     view = mathbox.cartesian(
