--- a/static/viewer/viewerNewton.html
+++ b/static/viewer/viewerNewton.html
@@ -215,7 +215,7 @@
                     var percent = (z - 0.9 * zMin) / (zMax - 0.9 * zMin);
                     var color = new THREE.Color(0xffffff);
                     color.setHSL(1 - 0.3 * percent, 1, 0.5);
-                    emit(color.r*0.9, 0.0, color.b, 1.0);
+                    emit(0.0, color.r*0.9, color.b, 1.0);
                 }
             );
         }
@@ -284,7 +284,7 @@
         }
     };
     // setting proxy:true allows interactive controls to override base position
-    var camera = mathbox.camera( { proxy: true, position: [-4,2,-4] } );
+    var camera = mathbox.camera( { proxy: true, position: [-2,2,-4] } );
 
     // save as variable to adjust later
     view = mathbox.cartesian(
@@ -313,7 +313,7 @@
     var zFormat = view.format( {digits: 2, font:"Arial", weight: "bold", style: "normal", source: zScale} );
     var zTicksLabel = view.label( {color: "blue", zIndex: 0, offset:[0,0], points: zScale, text: zFormat} );
 
-    view.grid( {axes:[1,3], width: 2, divideX: 20, divideY: 20, opacity:0.25} );
+    view.grid( {axes:[1,3], width: 3, divideX: 20, divideY: 20, opacity:0.5 ,color:"Gray"} );
 
 
     var graphData = view.area({
@@ -353,7 +353,7 @@
     });
 
     var vec =[];
-    vec[0] = view.vector({color: "#e77f00", width: 8, end: true, visible: true, points: vecData});
+    vec[0] = view.vector({color: "#ff0000", width: 8, end: true, visible: true, points: vecData});
     vec[1] = view.vector({color: "#00AF00", width: 8, end: true, visible: true, points: vecData});
     vec[2] = view.vector({color: "#AFA700", width: 8, end: true, visible: true, points: vecData});
     vec[3] = view.vector({color: "#808080", width: 8, end: true, visible: true, points: vecData});
